# handdetector

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
