cmake_minimum_required(VERSION 2.8)
project( Examples )
find_package( OpenCV )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories("/opt/X11/include")
link_directories("/opt/X11/include")
add_executable( Examples main.cpp )
target_link_libraries( Examples /opt/X11/lib/libX11.dylib)
target_link_libraries( Examples ${OpenCV_LIBS})
